--- a/html/semantic_elements.html
+++ b/html/semantic_elements.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>html structure</title>
+        <title>semantic elements</title>
     </head>
     <body>
-        DISPLAY TEXT lessgoo update check
+        &lt; &gt; &amp; &copy; hi&nbsp;losers
     </body>
 </html>
