--- a/html/same-dir.html
+++ b/html/same-dir.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>div and span elements</title>
+        <title>links file</title>
     </head>
     <body>
-        <a href="internal_links.html" title="stop hovering">
-            BACK TO internal_links.html
+        <a href="links.html" title="stop hovering">
+            BACK TO links.html
         </a>
     </body>
 </html>
