--- a/html/images.html
+++ b/html/images.html
@@ -7,7 +7,7 @@
     <body>
         <div>here is a picture from holayy</div>
         <p>
-            <img src="imagge.jpg">
+            <img src="imagge.jpg" width="400" height="300">
         </p>
         <div>and here is a random ahh picture from the internet</div>
         <p><img src="https://media.tenor.com/v6j3qu9ZmMIAAAAd/funny-cat.gif" width="320" height="320" alt="cat meme"></p>
